fixed the buttons in the projects section spacing, which was messed up after I fixed the first section buttons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,14 @@ body {
 	line-height: 1;
 }
 
+.projectsbuttonwrapper{
+ width: 50%;
+}
+
+.projectsbutton{
+	width: 100%
+}
+
 .AtScaleSplashWrapper {
 	width: 100%;
 }
